--- a/style.css
+++ b/style.css
@@ -4,3 +4,28 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+.title {
+    text-align: center;
+    font-weight: bold;
+    font-size: 2em;
+    padding: 30px 0px;
+}
+
+img {
+    width: 100%;
+    text-align: center;
+}
+
+.description > h2 {
+    padding: 10px 0px;
+}
+
+.cards {
+    width: 500px;
+    height: 600px;
+    border: 1px solid black;
+    background-color: rgb(200, 200, 255);
+    margin-bottom: 50px;
+    padding: 30px;
+}
